[build-system]
requires = ["setuptools",
            "pytest",
            "pytest-mock"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject"
description = "My project description goes here!"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = []
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
readme = "README.md"
license = { text = "MIT License" }
authors = [{name="Carsten König"}]

[project.urls]
Homepage = "https://gitlab.com/ck2go/python_template"

[project.scripts]
myscript = "myproject.__main__:main"



