[build-system]
requires = ["setuptools",
            "pytest",
            "pytest-mock"]
build-backend = "setuptools.build_meta"

[project]
name = "ck-astro"
description = "General tools for astronomy I personally use regularly for data analysis."
version = "0.0.1"
requires-python = ">=3.7"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
readme = "README.md"
license = { text = "MIT License" }
authors = [{name="Carsten König"}]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://gitlab.com/ck2go/ck-astro"

#[project.scripts]
#myscript = "ckastro.__main__:main"
